# fms-ehrs-flwr

./: .gitignore  README.md  pyproject.toml  slurm.sh
fed/: client_app.py  save_fed_avg.py  server_app.py  task.py
