[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fed"
version = "25.0.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "fms-ehrs@git+https://github.com/bbj-lab/clif-tokenizer.git@main#egg=fms-ehrs",
    "torch",
    "transformers>=4.30.0,<5.0",
    "trl",
    "wandb>=0.20"
]

[tool.black]
target-version = [
    "py311", "py312", "py313"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.flwr.app]
publisher = "burkh4rt"

[tool.flwr.app.components]
serverapp = "fed.server_app:app"
clientapp = "fed.client_app:app"

[tool.flwr.app.config]
per-device-train-batch-size = 4
num-server-rounds = 10
local-epochs = 1
data-version = "W++"
data-dir = "/gpfs/data/bbj-lab/users/burkh4rt/clif-data"
model-dir = "/gpfs/data/bbj-lab/users/burkh4rt/clif-mdls"
setup-version = "1e_4b_10r_0002lr"
gradient-accumulation-steps = 2
lr = 2e-4
max-seq-length = 1024

[tool.flwr.federations]
default = "localhost-gpu"

[tool.flwr.federations.localhost-gpu]
options.num-supernodes = 3
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 1

[tool.isort]
profile = "black"
